--- a/public/index.html
+++ b/public/index.html
@@ -64,8 +64,8 @@
                     </li>
                 </ul>
                 <br>
-                <h5>Compute watch time</h5>
-                <button id="print" class="btn btn-primary">compute</button>
+                <h5></h5>
+                <button id="print" class="btn btn-primary">Compute watch time</button>
                 <ul>
                     <li>By watched segments: <span id="resultsegment">0</span> seconds.</li>
                     <li>By heartbeat: <span id="resultheartbeat">0</span> seconds.</li>
